; ModuleID = '/home/carl/AnghaBench/curl/docs/examples/extr_ftp-wildcard.c_file_is_downloaded.c'
source_filename = "/home/carl/AnghaBench/curl/docs/examples/extr_ftp-wildcard.c_file_is_downloaded.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.callback_data = type { i32 }

@.str = private unnamed_addr constant [12 x i8] c"DOWNLOADED\0A\00", align 1
@CURL_CHUNK_END_FUNC_OK = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.callback_data*)* @file_is_downloaded to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @file_is_downloaded(%struct.callback_data* %0) #0 {
  %2 = alloca %struct.callback_data*, align 8
  store %struct.callback_data* %0, %struct.callback_data** %2, align 8
  %3 = load %struct.callback_data*, %struct.callback_data** %2, align 8
  %4 = getelementptr inbounds %struct.callback_data, %struct.callback_data* %3, i32 0, i32 0
  %5 = load i32, i32* %4, align 4
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %7, label %15

7:                                                ; preds = %1
  %8 = call i32 @printf(i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str, i64 0, i64 0))
  %9 = load %struct.callback_data*, %struct.callback_data** %2, align 8
  %10 = getelementptr inbounds %struct.callback_data, %struct.callback_data* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = call i32 @fclose(i32 %11)
  %13 = load %struct.callback_data*, %struct.callback_data** %2, align 8
  %14 = getelementptr inbounds %struct.callback_data, %struct.callback_data* %13, i32 0, i32 0
  store i32 0, i32* %14, align 4
  br label %15

15:                                               ; preds = %7, %1
  %16 = load i64, i64* @CURL_CHUNK_END_FUNC_OK, align 8
  ret i64 %16
}

declare dso_local i32 @printf(i8*) #1

declare dso_local i32 @fclose(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
